# GladOS

./: .gitignore  Makefile  README.md  glados  glados.cabal  setup.sh  test_part1.sh
.github/workflows/: ci.yml
documentation/: etude_technique.md  examples.md  grammar.bnf  introduction.md  syntax.md  technical_study.md
examples/: define.gla  demo.gla  errors.gla  lambda.gla  loops_and_argv.gla  showcase.gla  simple_loop.gla  test_builtins.gla  test_new_syntax.gla  test_new_syntax.glc  test_pow_fact.gla
src/: AST.hs  Bytecode.hs  BytecodeFile.hs  Compiler.hs  ErrorMessage.hs  Eval.hs  Lexer.hs  Main.hs  NewParser.hs  Parser.hs  Reader.hs  SExpr.hs  VM.hs
test/: ASTSpec.hs  BytecodeSpec.hs  CompilerSpec.hs  EvalSpec.hs  LexerSpec.hs  NewParserSpec.hs  ParserSpec.hs  ReaderSpec.hs  SExprSpec.hs  VMSpec.hs
tools/: dump_ast.hs
website/: README.md  backend.py  docs-style.css  docs.html  docs.js  index.html  playground.html  script.js  start-playground.sh  style.css
website/documentation/: builtins.md
