cabal-version: 1.12

name:           glados
version:        0.1.0.0
description:    GLaDOS - A Lisp-like language interpreter
author:         Epitech Student
maintainer:     student@epitech.eu
copyright:      2025
category:       Language
build-type:     Simple

library
  exposed-modules:
      SExpr
      AST
      Parser
      Eval
      Reader
      Lexer
      NewParser
      Bytecode
      Compiler
      VM
      ErrorMessage
      BytecodeFile
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , parsec
    , bytestring
  default-language: Haskell2010

executable glados
  main-is: Main.hs
  other-modules:
      AST
      Bytecode
      BytecodeFile
      Compiler
      ErrorMessage
      Eval
      Lexer
      NewParser
      Parser
      Reader
      SExpr
      VM
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , glados
    , containers
    , parsec
    , bytestring
  default-language: Haskell2010

test-suite glados-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      SExprSpec
      ParserSpec
      EvalSpec
      ReaderSpec
      LexerSpec
      NewParserSpec
      BytecodeSpec
      CompilerSpec
      VMSpec
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , glados
    , containers
    , parsec
    , hspec
    , QuickCheck
  default-language: Haskell2010
